Fixed issue with error message not showing up. Also made some styling fixes for desktop and mobile, and added error if trying to add overall score to activity that hasn't started yet. Also made it so only managers and coaches can see the add overall score button

--- a/src/main/resources/static/css/view-activity.css
+++ b/src/main/resources/static/css/view-activity.css
@@ -352,16 +352,39 @@ hr.rounded {
     overflow-y: auto
 }
 
+.overall-score-modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 32%;
+    border-radius: 20px;
+}
+
+.overall-score-modal-content.event {
+    width: 32%;
+    position: relative;
+    bottom: 40%;
+    overflow-y: initial;
+}
+
+
 @media (max-width: 700px) {
-    .modal-content.event {
+    .modal-content.event, .overall-score-modal-content {
         transform: translate(-69%, 100%) !important;
         overflow-y: unset;
         bottom: 40% !important;
         width: 90% !important;
         margin-left: 67% !important;
-        height: 40% !important;
-
+        height: fit-content !important;
     }
+
+
+    .overall-score-modal-content button {
+        margin-left: -21% !important;
+        width: 79% !important;
+    }
+
 
     .overall-scores-box {
         padding-bottom: 15% !important;
@@ -478,7 +501,7 @@ hr.rounded {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0px 160px;
+    padding: 0px 154px;
 }
 
 .timeDiv {
@@ -571,7 +594,7 @@ hr.rounded {
     }
 
     .team-scores {
-        padding: 0px 90px; !important;
+        padding: 0px 77px; !important;
     }
 
     .goalFacts button {
